--- a/turno-smart/Views/Shared/_LoginModal.cshtml
+++ b/turno-smart/Views/Shared/_LoginModal.cshtml
@@ -1,4 +1,5 @@
-﻿@* @model turno_smart.Areas.Identity.Pages.Account.LoginModel *@
+﻿@model turno_smart.Areas.Identity.Pages.Account.LoginModel.InputModel
+
 <!-- Modal de Login -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -9,19 +10,19 @@
             </div>
             <div class="modal-body">
                 <!-- Formulario de login -->
-                <form id="loginForm" method="post" asp-page="/Account/Login">
+                <form id="loginForm" method="post" asp-area="Identity" asp-page="/Account/Login">
                     <div class="mb-3">
-                        <input @* asp-for="Input.Email" *@ class="form-control" placeholder="Email" value="" />
-                        <span @* asp-validation-for="Input.Email" *@ class="text-danger"></span>
+                        <input asp-for="Email" class="form-control" placeholder="Email" value="" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <input @* asp-for="Input.Password" *@ class="form-control" type="password" placeholder="Contraseña" />
-                        <span @* asp-validation-for="Input.Password" *@ class="text-danger"></span>
+                        <input asp-for="Password" class="form-control" type="password" placeholder="Contraseña" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <div class="form-check mb-3">
-                            <input @* asp-for="Input.RememberMe" *@ class="form-check-input" type="checkbox" />
-                            <label @* asp-for="Input.RememberMe" *@ class="form-check-label">Recordarme</label>
+                            <input asp-for="RememberMe" class="form-check-input" type="checkbox" />
+                            <label asp-for="RememberMe" class="form-check-label">Recordarme</label>
                         </div>
                         <button type="button" class="p-0 text-custom btn btn-link" onclick="onLoginModalForgotPasswordBtnClick()">¿Olvidaste tu contraseña?</button>
                     </div>
