--- a/turno-smart/Views/Shared/_RegistrationModal.cshtml
+++ b/turno-smart/Views/Shared/_RegistrationModal.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal fade" id="registrationModal" tabindex="-1" aria-labelledby="registrationModalLabel" aria-hidden="true">
+﻿@model RegisterVM
+<div class="modal fade" id="registrationModal" tabindex="-1" aria-labelledby="registrationModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -6,66 +7,66 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form asp-action="Register" method="post">
+                <form method="post" asp-controller="Account" asp-action="Register">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Nombre" @* asp-for="Nombre" *@ />
-                                @* <span asp-validation-for="Nombre" class="text-danger"></span> *@
+                                <input type="text" class="form-control" placeholder="Nombre" asp-for="Nombre" />
+                                <span asp-validation-for="Nombre" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Apellido" @* asp-for="Apellido" *@ />
-                                @* <span asp-validation-for="Apellido" class="text-danger"></span> *@
+                                <input type="text" class="form-control" placeholder="Apellido" asp-for="Apellido" />
+                                <span asp-validation-for="Apellido" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="DNI" @* asp-for="Dni" *@ />
-                                @* <span asp-validation-for="Dni" class="text-danger"></span> *@
+                                <input type="text" class="form-control" placeholder="DNI" asp-for="DNI" />
+                                <span asp-validation-for="DNI" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Fecha de Nacimiento" @* asp-for="FechaNacimiento" *@ />
-                                @* <span asp-validation-for="FechaNacimiento" class="text-danger"></span> *@
+                                <input type="text" class="form-control" placeholder="Fecha de Nacimiento" asp-for="FechaNacimiento" />
+                                <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Email" @* asp-for="Email" *@ />
-                                @* <span asp-validation-for="Email" class="text-danger"></span> *@
+                                <input type="email" class="form-control" placeholder="Email" asp-for="Email" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Contraseña" @* asp-for="Password" *@ />
-                                @* <span asp-validation-for="Password" class="text-danger"></span> *@
+                                <input type="password" class="form-control" placeholder="Contraseña" asp-for="Password" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Repetir Contraseña" @* asp-for="ConfirmPassword" *@ />
-                                @* <span asp-validation-for="ConfirmPassword" class="text-danger"></span> *@
+                                <input type="password" class="form-control" placeholder="Repetir Contraseña" asp-for="ConfirmPassword" />
+                                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" @* asp-for="AcceptTerms" *@ />
+                                <input class="form-check-input" type="checkbox" asp-for="AceptoTerminos" />
                                 <label title="" for="terms" class="form-check-label">
                                     <span>
                                         Acepto los <a href="#" class="text-custom">Términos de Uso</a> y la<a href="#" class="text-custom"> Política de Privacidad</a>
                                     </span>
                                 </label>
-                                @* <span asp-validation-for="AcceptTerms" class="text-danger"></span> *@
+                                <span asp-validation-for="AceptoTerminos" class="text-danger"></span>
                             </div>
                         </div>
 
