--- a/turno-smart/wwwroot/css/site.css
+++ b/turno-smart/wwwroot/css/site.css
@@ -36,3 +36,39 @@ body {
     .doctor-card:hover {
         transform: translateY(-5px);
     }
+
+.especialidad-item {
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+    padding: 8px 0;
+    display: block;
+}
+
+    .especialidad-item:hover {
+        background-color: #f0f0f0;
+        cursor: pointer; /* Cambia el cursor a una mano */
+    }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #98DFD6;
+    border-top: 1px solid #e7e7e7;
+    position: relative
+}
+
+    .footer a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
+.form-group-spacing {
+    margin-bottom: 20px;
+}
