--- a/turno-smart/Views/Home/Servicios.cshtml
+++ b/turno-smart/Views/Home/Servicios.cshtml
@@ -33,8 +33,8 @@
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
                     <div class="text-custom mx-auto mb-4" style="width: 80px; height: 80px;">
                         @* Icono de ADN *@
-                        <svg class="w-100 h-100" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.25 6.083C15.97 5.26 17 4.202 17 3c0-1.38-1.79-2.5-4-2.5S9 1.62 9 3c0 1.202 1.03 2.26 2.75 3.083M9.75 18.917C8.03 19.74 7 20.798 7 22c0 1.38 1.79 2.5 4 2.5s4-1.12 4-2.5c0-1.202-1.03-2.26-2.75-3.083M10.75 12.25v-4.5M13.25 12.25v-4.5m-5 0h6.5m-6.5 6h6.5m-3.25 0v-4.5" />
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-dna w-100 h-100">
+                            <path d="M2 15c6.667-6 13.333 0 20-6"></path><path d="M9 22c1.798-1.998 2.518-3.995 2.807-5.993"></path><path d="M15 2c-1.798 1.998-2.518 3.995-2.807 5.993"></path><path d="m17 6-2.5-2.5"></path><path d="m14 8-1-1"></path><path d="m7 18 2.5 2.5"></path><path d="m3.5 14.5.5.5"></path><path d="m20 9 .5.5"></path><path d="m6.5 12.5 1 1"></path><path d="m16.5 10.5 1 1"></path><path d="m10 16 1.5 1.5"></path>
                         </svg>
                     </div>
                     <h3 class="card-title mb-0">Análisis Clínicos</h3>
@@ -48,8 +48,8 @@
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
                     <div class="text-custom mx-auto mb-4" style="width: 80px; height: 80px;">
                         @* Icono de estetoscopio *@
-                        <svg class="w-100 h-100" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a2 2 0 11-2-2 2 2 0 012 2zm0 0V8.879c0-.892-.72-1.63-1.607-1.875A8.965 8.965 0 0012 7c-3.314 0-6.157 2.42-7.393 5.759C3.387 13.445 3 14.703 3 16v1a1 1 0 001 1h6v-2H5v-1c0-.66.391-1.316 1.007-1.524C7.629 10.91 9.7 9 12 9c2.3 0 4.371 1.91 5.993 4.476C18.609 15.684 19 16.34 19 17v1h-4v2h6a1 1 0 001-1v-1c0-1.297-.387-2.555-1.607-4.241A8.965 8.965 0 0012 7a8.965 8.965 0 00-5.393 1.996A1.986 1.986 0 005 8.879V11a2 2 0 104 0V8.879A1.986 1.986 0 0112 7a8.965 8.965 0 015.393 1.996A8.965 8.965 0 0122 12.759C20.387 15.684 18 17 18 17v-6z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-stethoscope w-100 h-100">
+                            <path d="M4.8 2.3A.3.3 0 1 0 5 2H4a2 2 0 0 0-2 2v5a6 6 0 0 0 6 6v0a6 6 0 0 0 6-6V4a2 2 0 0 0-2-2h-1a.2.2 0 1 0 .3.3"></path><path d="M8 15v1a6 6 0 0 0 6 6v0a6 6 0 0 0 6-6v-4"></path><circle cx="20" cy="10" r="2"></circle>
                         </svg>
                     </div>
                     <h3 class="card-title mb-0">Profesionales</h3>
