--- a/turno-smart/Views/Home/Servicios.cshtml
+++ b/turno-smart/Views/Home/Servicios.cshtml
@@ -44,17 +44,19 @@
 
         <!-- Card Profesionales -->
         <div class="col-md-4">
-            <div class="card h-100 text-center p-4 border-0 shadow hover-lift doctor-card" style="aspect-ratio: 1/1;">
-                <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                    <div class="text-custom mx-auto mb-4" style="width: 80px; height: 80px;">
-                        @* Icono de estetoscopio *@
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-stethoscope w-100 h-100">
-                            <path d="M4.8 2.3A.3.3 0 1 0 5 2H4a2 2 0 0 0-2 2v5a6 6 0 0 0 6 6v0a6 6 0 0 0 6-6V4a2 2 0 0 0-2-2h-1a.2.2 0 1 0 .3.3"></path><path d="M8 15v1a6 6 0 0 0 6 6v0a6 6 0 0 0 6-6v-4"></path><circle cx="20" cy="10" r="2"></circle>
-                        </svg>
+            <a href="@Url.Action("Index", "Medico")" class="text-decoration-none text-reset">
+                <div class="card h-100 text-center p-4 border-0 shadow hover-lift doctor-card" style="aspect-ratio: 1/1;">
+                    <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                        <div class="text-custom mx-auto mb-4" style="width: 80px; height: 80px;">
+                            @* Icono de estetoscopio *@
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-stethoscope w-100 h-100">
+                                <path d="M4.8 2.3A.3.3 0 1 0 5 2H4a2 2 0 0 0-2 2v5a6 6 0 0 0 6 6v0a6 6 0 0 0 6-6V4a2 2 0 0 0-2-2h-1a.2.2 0 1 0 .3.3"></path><path d="M8 15v1a6 6 0 0 0 6 6v0a6 6 0 0 0 6-6v-4"></path><circle cx="20" cy="10" r="2"></circle>
+                            </svg>
+                        </div>
+                        <h3 class="card-title mb-0">Profesionales</h3>
                     </div>
-                    <h3 class="card-title mb-0">Profesionales</h3>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 </div>
