--- a/turno-smart/Views/Home/Servicios.cshtml
+++ b/turno-smart/Views/Home/Servicios.cshtml
@@ -28,11 +28,10 @@
         </div>
 
         <!-- Card Análisis Clínicos -->
-        <div class="col-md-4">
+@*         <div class="col-md-4">
             <div class="card h-100 text-center p-4 border-0 shadow hover-lift doctor-card" style="aspect-ratio: 1/1;">
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
                     <div class="text-custom mx-auto mb-4" style="width: 80px; height: 80px;">
-                        @* Icono de ADN *@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-dna w-100 h-100">
                             <path d="M2 15c6.667-6 13.333 0 20-6"></path><path d="M9 22c1.798-1.998 2.518-3.995 2.807-5.993"></path><path d="M15 2c-1.798 1.998-2.518 3.995-2.807 5.993"></path><path d="m17 6-2.5-2.5"></path><path d="m14 8-1-1"></path><path d="m7 18 2.5 2.5"></path><path d="m3.5 14.5.5.5"></path><path d="m20 9 .5.5"></path><path d="m6.5 12.5 1 1"></path><path d="m16.5 10.5 1 1"></path><path d="m10 16 1.5 1.5"></path>
                         </svg>
@@ -41,7 +40,7 @@
                 </div>
             </div>
         </div>
-
+ *@
         <!-- Card Profesionales -->
         <div class="col-md-4">
             <a href="@Url.Action("Index", "Medico")" class="text-decoration-none text-reset">
