agregado de footer, vista de turnos, uso de roles y correccion en relaciones entre usuarios paciente y medicos para que sea navegable desde las propiedades virtuales

--- a/turno-smart/Views/Especialidad/Index.cshtml
+++ b/turno-smart/Views/Especialidad/Index.cshtml
@@ -40,34 +40,36 @@
                                         <span class="me-2">•</span>
                                         @item.Nombre
                                     </a>
-                                
-                                    <div class="ms-auto">
-                                        <!-- Botón para Editar -->
-                                        <a asp-controller="Especialidades"
-                                           asp-action="Edit"
-                                           asp-route-id="@item.Id"
-                                           class="btn btn-sm btn-primary me-1">
-                                            Editar
-                                        </a>
+                                    @if (@User.IsInRole("Admin"))
+                                    {
+                                        <div class="ms-auto">
+                                            <!-- Botón para Editar -->
+                                            <a asp-controller="Especialidades"
+                                               asp-action="Edit"
+                                               asp-route-id="@item.Id"
+                                               class="btn btn-sm btn-primary me-1">
+                                                Editar
+                                            </a>
 
-                                        <!-- Botón para Detalles -->
-                                        <a asp-controller="Especialidades"
-                                           asp-action="Details"
-                                           asp-route-id="@item.Id"
-                                           class="btn btn-sm btn-secondary me-1">
-                                            Detalles
-                                        </a>
+                                            <!-- Botón para Detalles -->
+                                            <a asp-controller="Especialidades"
+                                               asp-action="Details"
+                                               asp-route-id="@item.Id"
+                                               class="btn btn-sm btn-secondary me-1">
+                                                Detalles
+                                            </a>
 
-                                        <!-- Botón para Eliminar -->
-                                        <button type="button"
-                                                class="btn btn-sm btn-danger"
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#deleteModal"
-                                                data-id="@item.Id"
-                                                data-name="@item.Nombre">
-                                            Eliminar
-                                        </button>
-                                    </div>
+                                            <!-- Botón para Eliminar -->
+                                            <button type="button"
+                                                    class="btn btn-sm btn-danger"
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#deleteModal"
+                                                    data-id="@item.Id"
+                                                    data-name="@item.Nombre">
+                                                Eliminar
+                                            </button>
+                                        </div>
+                                    }
                                 </li>
                             }
                         </ul>
