agregado de viewdata

--- a/turno-smart/Views/Medico/Index.cshtml
+++ b/turno-smart/Views/Medico/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ListMedicoVM
 @{
-    ViewData["Title"] = "Profesionales";
+    ViewData["Title"] = "Medicos";
 }
 <div class="container py-5">
     <div class="d-flex justify-content align-items-center gap-3">
