--- a/turno-smart/Views/Turno/Create.cshtml
+++ b/turno-smart/Views/Turno/Create.cshtml
@@ -1,4 +1,10 @@
 ﻿@model CreateTurnoVM
+
+@{
+    ViewData["Title"] = "Reservar Turno";
+}
+
+
 <div class="container pt-4">
     <partial name="_BackToServicios" />
 </div>
