--- a/turno-smart/Views/Especialidad/Index.cshtml
+++ b/turno-smart/Views/Especialidad/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model ListEspecialidadVM
 
+@{
+    ViewData["Title"] = "Especialidades";
+}
+
+
 <div class="container py-5">
     <partial name="_BackToServicios" />
 
