--- a/turno-smart/Views/Shared/_TurnosPaciente.cshtml
+++ b/turno-smart/Views/Shared/_TurnosPaciente.cshtml
@@ -58,9 +58,8 @@
                             @turno.MotivoConsulta
                         </p>
 
-                        <button class="btn btn-primary w-100 mt-3"
-                                onClick="">
-                            Modificar
+                        <button type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-edit" onclick="OpenEditModal(@turno.TurnoId)">
+                            Editar Turno
                         </button>
                     </div>
                 </div>
@@ -75,7 +74,14 @@
     }
 
 </div>
-
+<!-- modal placeholders-->
+<div id="modal-edit" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div id='modal-edit-content'></div>
+        </div>
+    </div>
+</div>
 <!-- Modal de Eliminacion -->
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -86,7 +92,7 @@
             </div>
             <div class="modal-body">
                 <p>¿Estás seguro que deseas cancelar tu turno para <span id="especialidad"></span>?</p>
-                <p class="text-muted mb-0">Fecha: <span id="fecha"> hs</p>
+                <p class="text-muted mb-0">Fecha: <span id="fecha"></span> hs</p>
             </div>
             <div class="modal-footer">
                 <form method="post" asp-action="DeleteConfirmed" asp-controller="Turno">
@@ -100,21 +106,21 @@
 </div>
 
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        const deleteModal = document.getElementById('deleteModal');
-        deleteModal.addEventListener('show.bs.modal', (event) => {
-            const button = event.relatedTarget; // Botón que abrió el modal
-
-            // Obtener los datos del botón
-            const turnoId = button.getAttribute('data-id');
-            const especialidad = button.getAttribute('data-especialidad');
-            const fecha = button.getAttribute('data-fecha');
-            const hora = button.getAttribute('data-hora');
-
-            // Actualizar el contenido del modal
-            document.getElementById('turnoId').value = turnoId;
-            document.getElementById('fecha').textContent = `${fecha} - ${hora}`;
-            document.getElementById('especialidad').textContent = especialidad;
-        });
-    });
+    function OpenEditModal(id) {
+        var data = { id: id };
+        $.ajax(
+            {
+                type: 'GET',
+                url: '/Turno/Edit',
+                contentType: 'application/json; charset=utf=8',
+                data: data,
+                success: function (result) {
+                    $('#modal-edit-content').html(result);
+                    $('#modal-edit').modal('show');
+                },
+                error: function (er) {
+                    alert(er);
+                }
+            });
+    }
 </script>
