--- a/turno-smart/Views/Especialidad/Index.cshtml
+++ b/turno-smart/Views/Especialidad/Index.cshtml
@@ -1,45 +1,20 @@
 ﻿@model ListEspecialidadVM
 @Html.AntiForgeryToken()
-
-@section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            var successMessage = '@TempData["SuccessMessage"]';
-            var errorMessage = '@TempData["ErrorMessage"]';
-
-            if (successMessage) {
-                toastr.success(successMessage);
-            }
-
-            if (errorMessage) {
-                toastr.error(errorMessage);
-            }
-        });
-    </script>
-}
-
-    <div class="container py-5">
-        <div class="d-flex justify-content align-items-center gap-3">
-            <partial name="_BackToServicios" />
-            @if (User.IsInRole("Admin"))
-        {
-            <p>
-                <form method="get" asp-action="Create">
-                    <button type="submit" class="btn btn-light btn-lg mt-4">➕ Crear Especialidad</button>
-                </form>
-            </p>
-        }
-    </div>
-
 @{
     ViewData["Title"] = "Especialidades";
 }
 
 
 <div class="container py-5">
-   
+    <div class="d-flex justify-content align-items-center gap-3">
+        <partial name="_BackToServicios" />
+        @if (User.IsInRole("Admin"))
+        {
+        <form method="get" asp-action="Create">
+            <button type="submit" class="btn btn-light btn-lg mt-4">➕ Crear Especialidad</button>
+        </form>
+        }
+    </div>
     <div class="row">
         <div class="col-lg-6">
             <h1 class="display-4 mb-4">Especialidades</h1>
@@ -120,3 +95,23 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+        var successMessage = '@TempData["SuccessMessage"]';
+        var errorMessage = '@TempData["ErrorMessage"]';
+        console.log(successMessage);
+        console.log(errorMessage);
+
+        if (successMessage) {
+        toastr.success(successMessage);
+        }
+
+        if (errorMessage) {
+        toastr.error(errorMessage);
+        }
+        });
+
+    </script>
+}
