correccion de link de controller

--- a/turno-smart/Views/Shared/_Navbar.cshtml
+++ b/turno-smart/Views/Shared/_Navbar.cshtml
@@ -31,7 +31,7 @@
                     <a class="text-white nav-link" asp-area="" asp-controller="Turno" asp-action="Index">Agenda</a>
                     <a class="text-white nav-link" asp-area="" asp-controller="Medico" asp-action="Index">Medicos</a>
                     <a class="text-white nav-link" asp-area="" asp-controller="Paciente" asp-action="Index">Pacientes</a>
-                    <a class="text-white nav-link" asp-area="" asp-controller="Especialidades" asp-action="Index">Especialidades</a>
+                    <a class="text-white nav-link" asp-area="" asp-controller="Especialidad" asp-action="Index">Especialidades</a>
 
                 }
                 @if (!(@User.IsInRole("Medico") || @User.IsInRole("Admin")))
